--- a/CM131/00/index.html
+++ b/CM131/00/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<p style="margin:auto;">Hello, World!</p>
+<p style="margin:auto;display:block;">Hello, World!</p>
 </body>
 </html>
