--- a/CM131/00/index.html
+++ b/CM131/00/index.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>CM131 00</title>
+<style>
+  body{background:#eef;}
+</style>
 </head>
 
 <body>
-<p style="margin:auto;width:200px;background:#eee;">Hello, World!</p>
+<p style="margin:auto;width:200px;background:#eee;padding:5px;text-align:center;">Hello, World!</p>
 </body>
 </html>
