--- a/CM131/00/index.html
+++ b/CM131/00/index.html
@@ -5,10 +5,18 @@
 <title>CM131 00</title>
 <style>
   body{background:#eef;}
+  p{
+    margin:auto;
+    width:200px;
+    background:#eee;
+    padding:5px;
+    text-align:center;
+    box-shadow:0 3px 4px #000;
+  }
 </style>
 </head>
 
 <body>
-<p style="margin:auto;width:200px;background:#eee;padding:5px;text-align:center;">Hello, World!</p>
+<p>Hello, World!</p>
 </body>
 </html>
