--- a/CM131/00/index.html
+++ b/CM131/00/index.html
@@ -13,10 +13,16 @@
     text-align:center;
     box-shadow:0 3px 4px #000;
   }
+  #icon_github{
+    width:200px;
+    height:200px;
+    margin:auto;
+  }
 </style>
 </head>
 
 <body>
 <p>Hello, World!</p>
+<img src="icon.png" id="icon_github">
 </body>
 </html>
