--- a/CM131/00/index.html
+++ b/CM131/00/index.html
@@ -13,7 +13,7 @@
     text-align:center;
     box-shadow:0 3px 4px #000;
   }
-  #icon_github{
+  img{
     width:100px;
     height:100px;
     margin:auto;
