--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<a href="FR/toto/page_2.html">Aller a la page 2</a>
+	<a href="fr/toto/page_2.html">Aller a la page 2</a>
 	<h1>Communication Multimedia! éèàù</h1>
 
 	<a href="mailto:jvouillon@ustboniface.ca">Courriel / email</a><br />
