--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Ma page sur GitHub</title>
+<title>GitHub</title>
 </head>
 
 <body>
 	<h1>Bienvenu sur ma page GitHub!</h1>
+	<img src="medias/github-logo.png">
 </body>
 </html>
