--- a/CM131/index.html
+++ b/CM131/index.html
@@ -5,11 +5,22 @@
 <title>Toto artiste multimedia</title>
 </head>
 
-<body style="background:rgb(0,255,128);">
+<body style="background:#7DC8E1;">
+	
+	
 	
 	<a href="FR/toto/page_2.html">Aller a la page 2</a>
 	<h1>Communication Multimedia! éèàù</h1>
+	
+	<a href="http://images.fanpop.com/images/image_uploads/JAPAN-LANDSCAPE-japan-419407_1920_1440.jpg"> 
 
+		<img src="photo_japon.jpg"
+		width="400" height="300" alt="image de chat...">
+
+	</a>
+	
+	
+	
 	<a href="mailto:jvouillon@ustboniface.ca">Courriel / email</a><br />
 	<a href="tel:2042330210">Contactez moi au 204-233-0210</a>
 	
@@ -17,6 +28,8 @@
 <p><strong>Lorem ipsum</strong> dolor sit amet, <a href="http://communicationmultimedia.net" target="toto">consectetur</a> adipiscing elit. Nulla consequat eleifend velit, sit amet porttitor erat venenatis quis. Sed varius at ex et lobortis. Vivamus elementum feugiat porttitor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque venenatis tempor tellus, vel pretium justo volutpat eget. Aliquam sed ex eget orci euismod pharetra. Ut porttitor velit at leo cursus ullamcorper. Donec efficitur sem sed massa maximus, hendrerit placerat nulla semper. Aliquam erat volutpat. Cras cursus semper condimentum. Aenean tempus finibus suscipit. Vestibulum faucibus dolor et metus facilisis, non egestas enim convallis. In eu nunc vel nisl laoreet sodales. Vestibulum dictum massa leo, at auctor elit cursus ac.</p>
 
 <p>Morbi imperdiet odio eu felis ultricies vehicula. In vitae sem vitae arcu porta consectetur et eget urna. Nullam ac massa arcu. Cras vitae justo vitae nunc pretium semper. Mauris placerat euismod massa et rutrum. Nulla iaculis tincidunt est vel semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. In nec accumsan ipsum, id mattis purus. Aliquam volutpat est placerat aliquet eleifend. Suspendisse ultrices vitae felis ut posuere. In fermentum suscipit ante, et malesuada quam mollis in.</p>
+
+<img src="http://loremflickr.com/400/300?random=2" width="400px" height="300px">
 
 <p>Ut at aliquet magna. Integer lectus tortor, volutpat eu accumsan vel, euismod sit amet magna. Pellentesque feugiat dictum sem vitae pretium. Praesent eget est eget enim efficitur congue vitae sit amet lectus. Duis nec erat in nisl sagittis porta. Vivamus ut velit lorem. Fusce mollis elit ac felis pulvinar maximus et eget urna. In feugiat tempus mollis. Nulla facilisi. Nulla consequat dolor ut justo viverra, ut iaculis erat volutpat. Integer ante est, malesuada non gravida ut, lacinia id quam. Aenean vitae est nec arcu molestie euismod eget non est.</p>
 
