--- a/CM215/01/index.html
+++ b/CM215/01/index.html
@@ -11,6 +11,7 @@
   <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
   <link rel="apple-touch-startup-image" href="startup-image.png">
   <meta name="apple-mobile-web-app-title" content="CrazyBall">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <title>01</title>
   <script src="libraries/p5.js" type="text/javascript"></script>
