--- a/CM132/index_00.html
+++ b/CM132/index_00.html
@@ -6,10 +6,12 @@
 </head>
 
 <style>
-@media screen {
-	h1{font-family:arial;}
+@media screen and (max-width:320px){
+	h1{font-family:arial;font-size: 40px;}
 	}
 
+	
+	
 @media print {
 	body{margin-left:20%;}
 	h1{}
