--- a/CM132/01/index.html
+++ b/CM132/01/index.html
@@ -51,6 +51,6 @@
 		<pre>
 @import url('https://fonts.googleapis.com/css?family=Kumar+One');
 		</pre>
-		<div id="qrcode"><img src="qr_code.jpg" width="20%"></div>
+		<div id="qrcode"><img src="qr_code.png" width="20%"></div>
 	</body>
 </html>
