--- a/CM132/01/index.html
+++ b/CM132/01/index.html
@@ -22,6 +22,7 @@
 
 	body{font-family: verdana;}
 	#qrcode{display:none;}
+	#noqrcode{display:block;}
 	
 	@media print{
 		body{
@@ -30,6 +31,7 @@
 		}
 		nav{display:none;}
 		#qrcode{display:block;}
+		#noqrcode{display:none;}
 	}
 </style>
 
@@ -51,6 +53,8 @@
 		<pre>
 @import url('https://fonts.googleapis.com/css?family=Kumar+One');
 		</pre>
+		https://jvouillon.github.io/CM132/01/
+		<div id="noqrcode"><a href="https://jvouillon.github.io/CM132/01/">Voir ce fichier en ligne sur GitHub</a></div>
 		<div id="qrcode"><img src="qr_code.png" width="20%"></div>
 	</body>
 </html>
