--- a/CM132/01/index.html
+++ b/CM132/01/index.html
@@ -55,6 +55,6 @@
 		</pre>
 
 		<div id="noqrcode"><a href="https://jvouillon.github.io/CM132/01/">Voir ce fichier en ligne sur GitHub</a></div>
-		<div id="qrcode"><img src="qr_code.png" width="20%"></div>
+		<div id="qrcode">Scannez le QRCode pour voir ce fichier en ligne sur GitHub:<br /><img src="qr_code.png" width="20%"></div>
 	</body>
 </html>
