--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>untitled</title>
 <style>
 @media screen and (min-width:1400px){
