--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>untitled</title>
 <style>
 @media screen and (min-width:1400px){
@@ -42,7 +43,7 @@
 		height:400px;
 	}
 }
-@media screen and (min-width:321px) and (max-width:1023px){
+@media screen and (min-width:569px) and (max-width:1023px){
 	header{
 		width:800px;
 		height:120px;
@@ -58,13 +59,13 @@
 		height:40px;
 	}
 }
-@media screen and (max-width:320px){
+@media screen and (max-width:568px){
 	header{
-		width:399px;
+		width:320px;
 		height:50px;
 	}
 	#wrapper{
-		width:399px;
+		width:320px;
 		height:auto;
 	}
 	nav{
