--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -90,7 +90,7 @@ header{
 }
 span{vertical-align:middle;}
 #wrapper{
-	background-color:#a66;
+	background-color:#06f;
 	min-height:400px;
 	margin-top:10px;
 	position:relative;
