--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -96,7 +96,7 @@ header{
 }
 span{vertical-align:middle;}
 #wrapper{
-	background-color:#06f;
+	background-color:#F6f;
 	min-height:400px;
 	margin-top:10px;
 	position:relative;
