--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
  <meta name="apple-mobile-web-app-title" content="Mon APP!">
  <meta name="apple-mobile-web-app-capable" content="yes">
- 
+  <link rel="apple-touch-startup-image" href="startup-image.png">
+  
  <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
  <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
  <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
@@ -96,7 +97,7 @@ header{
 }
 span{vertical-align:middle;}
 #wrapper{
-	background-color:#F6f;
+	background-color:#F66;
 	min-height:400px;
 	margin-top:10px;
 	position:relative;
