--- a/CM132/00/index.html
+++ b/CM132/00/index.html
@@ -5,7 +5,7 @@
 <title>CM-119 | media queries</title>
 <link href="styles.css" rel="stylesheet" type="text/css" />
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 user-scalable=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
 </head>
 
