--- a/CM132/00/index.html
+++ b/CM132/00/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="apple-mobile-web-app-title" content="CM132">
+<meta name="apple-mobile-web-app-capable" content="yes">
+
 <title>CM-119 | media queries</title>
 <link href="styles.css" rel="stylesheet" type="text/css" />
 
