--- a/CM132/00/index.html
+++ b/CM132/00/index.html
@@ -19,9 +19,13 @@
 <div class="myDisplay" id="desktop_1">1200 &lt; Desktop</div>
 <div class="myDisplay" id="desktop_2">800 &lt; Desktop &lt; 1200</div>
 <div class="myDisplay" id="desktop_3">Desktop &lt; 800</div>
-<div class="myDisplay" id="ipad_1">iPad Landscape</div>
-<div class="myDisplay" id="ipad_2">iPad Portrait</div>
-<div class="myDisplay" id="iphone_1">iPhone Landscape</div>
-<div class="myDisplay" id="iphone_2">iPhone Portrait</div>
+<div class="myDisplay" id="ipad_1">iPad Land.</div>
+<div class="myDisplay" id="ipad_2">iPad Port.</div>
+
+<div class="myDisplay" id="iphone_se_land">iPhone SE Land.</div>
+<div class="myDisplay" id="iphone_se_port">iPhone SE Port.</div>
+
+<div class="myDisplay" id="iphone_land">iPhone Land.</div>
+<div class="myDisplay" id="iphone_port">iPhone Port.</div>
 </body>
 </html>
