--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -103,7 +103,7 @@ span{vertical-align:middle;}
 	position:relative;
 }
 nav{
-	background-color:#66a;
+	background-color:#6a6;
 }
 /***********************************************************/
 </style>
