--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
  <meta name="apple-mobile-web-app-title" content="Mon APP!">
  <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-startup-image" sizes="640x1136" href="startup-image-640x1136.png">
+ 
+  <link rel="apple-touch-startup-image" href="startup-image-640x1136.png">
   
  <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
  <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
@@ -103,7 +104,7 @@ span{vertical-align:middle;}
 	position:relative;
 }
 nav{
-	background-color:#69a;
+	background-color:#99a;
 }
 /***********************************************************/
 </style>
