--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -7,6 +7,7 @@
  <meta name="apple-mobile-web-app-capable" content="yes">
  
   <link rel="apple-touch-startup-image" href="startup-image-640x1136.png">
+  <link rel="apple-touch-startup-image" href="startup-image-640x1136.png" media="screen and (min-device-width: 480px) and (orientation:portrait)" />
   
  <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
  <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
