--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -105,7 +105,7 @@ span{vertical-align:middle;}
 	position:relative;
 }
 nav{
-	background-color:#999;
+	background-color:#F99;
 }
 /***********************************************************/
 </style>
