--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -123,7 +123,7 @@ span{vertical-align:middle;}
 	position:relative;
 }
 nav{
-	background-color:#F99;
+	background-color:#FF9;
 }
 /***********************************************************/
 </style>
