--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -6,26 +6,10 @@
  <meta name="apple-mobile-web-app-title" content="Mon APP!">
  <meta name="apple-mobile-web-app-capable" content="yes">
  <!-- **************************************** -->
- <!-- iPhone -->
-<link href="http://www.example.com/mobile/images/apple-startup-iPhone.jpg" media="(device-width: 320px)" rel="apple-touch-startup-image">
 
-<!-- iPhone (Retina) -->
-<link href="http://www.example.com/mobile/images/apple-startup-iPhone-RETINA.jpg" media="(device-width: 320px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
+<link href="/startup-image-640x1136.jpg" rel="apple-touch-startup-image">
 
-<!-- iPhone Tall (Retina) -->
-<link href="http://www.example.com/mobile/images/apple-startup-iPhone-Tall-RETINA.jpg" rel="apple-touch-startup-image" sizes="640x1096">
 
-<!-- iPad (portrait) -->
-<link href="http://www.example.com/mobile/images/apple-startup-iPad-Portrait.jpg" media="(device-width: 768px) and (orientation: portrait)" rel="apple-touch-startup-image">
-
-<!-- iPad (landscape) -->
-<link href="http://www.example.com/mobile/images/apple-startup-iPad-Landscape.jpg" media="(device-width: 768px) and (orientation: landscape)" rel="apple-touch-startup-image">
-
-<!-- iPad (Retina, portrait) -->
-<link href="http://www.example.com/mobile/images/apple-startup-iPad-RETINA-Portrait.jpg" media="(device-width: 768px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
-
-<!-- iPad (Retina, landscape) -->
-<link href="http://www.example.com/mobile/images/apple-startup-iPad-RETINA-Landscape.jpg" media="(device-width: 768px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
 <!-- **************************************** -->
  <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
  <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
