--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -107,7 +107,7 @@ span{vertical-align:middle;}
 	position:relative;
 }
 nav{
-	background-color:#FF9;
+	background-color:#F9F;
 }
 /***********************************************************/
 </style>
