--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -7,8 +7,7 @@
  <meta name="apple-mobile-web-app-capable" content="yes">
  <!-- **************************************** -->
 
-<link href="/startup-image-640x1136.jpg" rel="apple-touch-startup-image">
-
+<link rel="apple-touch-startup-image" href="/startup-image-320x460.png" />
 
 <!-- **************************************** -->
  <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
