--- a/CM132/02/index.html
+++ b/CM132/02/index.html
@@ -106,7 +106,7 @@ span{vertical-align:middle;}
 	position:relative;
 }
 nav{
-	background-color:#F9F;
+	background-color:#99F;
 }
 /***********************************************************/
 </style>
