--- a/CM127/12/index.html
+++ b/CM127/12/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>11 | IMAGE + TRANSFORMATIONS</title>
+    
+     <meta name="apple-mobile-web-app-title" content="My App!">
+ <meta name="apple-mobile-web-app-capable" content="yes">
+ 
+ 
     <script src="libraries/p5.js" type="text/javascript"></script>
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
