--- a/CM127/12/index.html
+++ b/CM127/12/index.html
@@ -6,6 +6,7 @@
     
      <meta name="apple-mobile-web-app-title" content="My App!">
  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="apple-touch-icon" href="assets/icon.png">
  
  
     <script src="libraries/p5.js" type="text/javascript"></script>
