--- a/CM127/12/index.html
+++ b/CM127/12/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>11 | IMAGE + TRANSFORMATIONS</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" maximum-scale=1 "user-scalable=no>
+  <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1 user-scalable=no">
      <meta name="apple-mobile-web-app-title " content="My App! ">
       <meta name="apple-mobile-web-app-capable " content="yes ">
       <link rel="apple-touch-icon " href="assets/icon.png ">
