--- a/photo.html
+++ b/photo.html
@@ -2,42 +2,25 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>untitled</title>
+<title>Test Photo</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="apple-mobile-web-app-title" content="Photo!">
+<meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 
 <body>
-	
 	<div id="test"></div>
-	
 	<input type="file" accept="image/*" onchange="picChange(event)"/>
 	
 	<script>
-	
-	
-	
-	function picChange(evt){ 
-//bring selected photo in
-//get files captured through input
-var fileInput = evt.target.files;
-
-
-
-if(fileInput.length>0){
-//get the file
-
-
-//window url 
-var windowURL = window.URL || window.webkitURL; 
-
-//picture url
-var picURL = windowURL.createObjectURL(fileInput[0]);
-alert(picURL);
-document.getElementById("test").innerHTML = "<img src='"+picURL+"'> width='200px'";
-}
-
-}
-</script>
-	
-	
+		function picChange(evt){ 
+			var fileInput = evt.target.files;
+			if(fileInput.length>0){
+				var windowURL = window.URL || window.webkitURL; 
+				var picURL = windowURL.createObjectURL(fileInput[0]);
+				document.getElementById("test").innerHTML = "<img src='"+picURL+"'> width='200px'";
+			}
+		}
+	</script>
 </body>
 </html>
