--- a/photo.html
+++ b/photo.html
@@ -13,8 +13,9 @@ img{width:200px;margin:auto;}
 </head>
 
 <body>
+	<p>Version:1.0</p>
+	<p><input type="file" accept="image/*" onchange="picChange(event)"/></p>
 	<div id="test"></div>
-	<input type="file" accept="image/*" onchange="picChange(event)"/>
 	
 	<script>
 		function picChange(evt){ 
