--- a/photo.html
+++ b/photo.html
@@ -8,13 +8,13 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 
 <style>
-img{width:200px;border:4px solid:#fff;box-shadow:0 3px 9px #000;}
-#test{margin:auto;}
+img{width:200px;border:4px solid #fff;box-shadow:0 3px 9px #000;}
+#test{width:200px;margin:auto;}
 </style>
 </head>
 
 <body>
-	<p>Version:1.1</p>
+	<p>Version:1.2</p>
 	<p><input type="file" accept="image/*" onchange="picChange(event)"/></p>
 	<div id="test"></div>
 	
