--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <meta charset="utf-8">
 <title>GitHub</title>
 </head>
-
+<style>
+body{background:#ccc;}
+h1{font-family:verdana,arial;font-size: 40px;text-align: center;}
+div{display:block;width:512px;margin:auto;}
+</style>
 <body>
-	<h1>Bienvenu sur ma page GitHub!</h1>
-	<img src="medias/github-logo.png">
+	<h1>jvouillon's GitHub!</h1>
+	<div><img src="medias/github-logo.png"><div>
 </body>
 </html>
