--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
 <title>GitHub</title>
 </head>
 <style>
-body{background:#ccc;}
-h1{font-family:verdana,arial;font-size: 40px;text-align: center;}
-div{display:block;width:512px;margin:auto;}
+@import url('https://fonts.googleapis.com/css?family=Baloo+Bhaina');
+body{background:#ccc;margin:0;padding:0;}
+h1{font-family:'Baloo Bhaina',verdana,arial;font-size: 40px;text-align: center;color:#fff;text-shadow:0 2px 5px #000;margin:0;margin-top:50px;}
+#logo{display:block;width:512px;margin:auto;}
+#shadow{position:fixed;top:0;left:0;width:100%;height:100%;box-shadow:0 0 120px #000 inset;}
+
 </style>
 <body>
-	<h1>jvouillon's GitHub!</h1>
-	<div><img src="medias/github-logo.png"><div>
+	<div id="shadow"></div>
+	<h1>jvouillon's GitHub Page!</h1>
+	<div id="logo"><img src="medias/github-logo.png"><div>
 </body>
 </html>
