--- a/audio/index.html
+++ b/audio/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-	<audio autoplay="true"><source src="loop.mp3" type="audio/mpeg"></audio>
+	<audio autoplay="true" controls style="width:100%;"><source src="loop.mp3" type="audio/mpeg"></audio>
 </body>
 </html>
