--- a/audio/index.html
+++ b/audio/index.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>Test audio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="apple-mobile-web-app-title" content="CM132">
+<meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 
 <body>
-	<audio autoplay="true" controls style="width:100%;"><source src="loop.mp3" type="audio/mpeg"></audio>
+	<audio autoplay controls style="width:100%;"><source src="loop.mp3" type="audio/mpeg"></audio>
 </body>
 </html>
