--- a/audio/index.html
+++ b/audio/index.html
@@ -8,7 +8,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 
-<body>
-	<audio autoplay controls style="width:100%;"><source src="loop.mp3" type="audio/mpeg"></audio>
+<body onload="playAudio()">
+	<audio controls style="width:100%;margin-top:100px;" id="audio"><source src="loop.mp3" type="audio/mpeg"></audio>
+	<script>
+	function playAudio() {
+		document.getElementById("audio").play();
+	}</script>
 </body>
 </html>
