--- a/audio/index.html
+++ b/audio/index.html
@@ -8,11 +8,10 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 
-<body onload="playAudio()">
+<body>
 	<audio controls style="width:100%;margin-top:100px;" id="audio"><source src="loop.mp3" type="audio/mpeg"></audio>
 	<script>
-	function playAudio() {
-		document.getElementById("audio").play();
-	}</script>
+	window.onload = function() {document.getElementById("audio").play();}
+	</script>
 </body>
 </html>
