--- a/usb_expo/index.html
+++ b/usb_expo/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	
+	<div id="background"></div>
 	<div id="halfTop">
 		<div id="header">Diplômés</div>
 		<div class="zoomOut" id="zoom" onclick="zoomOutThumbnail()">
