--- a/vrtour_hmd/index.html
+++ b/vrtour_hmd/index.html
@@ -3,12 +3,15 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
-		<title>Lobby</title>
+		<title>SBRNAA</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="mobile-web-app-capable" content="yes" />				
 		
+		<link rel="apple-touch-icon" href="images/icon-114x114.jpg"/>
+
+
 		<style type="text/css" title="Default">
 			body, div, h1, h2, h3, span, p {
 				font-family: Verdana,Arial,Helvetica,sans-serif;
