--- a/ramwc/index.html
+++ b/ramwc/index.html
@@ -22,7 +22,7 @@
 <script type="text/javascript" src="js/pano2vr_player.js"></script>
 
 <!-- ************************************************************** -->
-<title>The RAMWC Virtual Cockpits Collection</title>
+<title>RAMWC VR</title>
 </head>
 
 <body onorientationchange="hideUrlBar();" id="homepage">
