--- a/vrtour_index.html
+++ b/vrtour_index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<meta name="mobile-web-app-capable" content="yes" />
+<link rel="apple-touch-icon" href="images/icon-114x114.jpg"/>
+
 <title>SBRNAA</title>
 <style>
 body{margin:0;background: #fff;}
