--- a/vrtour_index.html
+++ b/vrtour_index.html
@@ -6,7 +6,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="mobile-web-app-capable" content="yes" />
-<link rel="apple-touch-icon" href="images/icon-114x114.jpg"/>
+<link rel="apple-touch-icon" href="vrtour/images/icon-114x114.jpg"/>
 
 <title>SBRNAA</title>
 <style>
