--- a/vrtour_index.html
+++ b/vrtour_index.html
@@ -13,8 +13,7 @@
 body{margin:0;background: #fff;}
 .btn, .help{
 	width:90%;
-	padding-top:60px;
-	padding-bottom:60px;
+	padding:50px 0;
 	text-align: center;
 	text-decoration: none;
 	font-family: verdana;
@@ -22,14 +21,13 @@ body{margin:0;background: #fff;}
 	color:#3C3847;
 	background:#E2D364;
 	display:block;
-	margin:auto;
-	margin-top:20px;
+	margin:20px auto 0 auto;
 	border-radius:10px;
 	border: solid 1px #3C3847;
 }
 .help{
-	padding-top:20px;
-	padding-bottom:20px;
+	padding:15px 0;
+	margin-bottom:20px;
 	font-size: 15px;
 	color:#E2D364;
 	background:#3C3847;
@@ -37,8 +35,7 @@ body{margin:0;background: #fff;}
 #logo{
 	width:159px;
 	height:200px;
-	margin:auto;
-	margin-top:20px;
+	margin:20px auto 0 auto;
 }
 </style>
 </head>
