--- a/zapcoder/index.html
+++ b/zapcoder/index.html
@@ -11,13 +11,6 @@ body{
 	margin:0;
 	background: #999;
 }
-#half{
-	width:100vw;
-	height:50vh;
-	position:absolute;
-	bottom:0;
-	border-top:1px solid #555;
-}
 #container{
 	width:80vw;
 	height:80vw;
@@ -26,31 +19,21 @@ body{
 	position: relative;
 	border:1px solid #555;
 	border-radius:50%;
-}
-
-#zapcoder, #ring0, #ring1{
-	border-radius:50%;
-	position: absolute;
 	overflow:hidden;
 }
-#zapcoder{
+#zapcoder, #ring0, #ring1{
  	width:80%;
  	height:80%;
-}
-#ring0, #ring1{
- 	width:100%;
- 	height:100%;
-}
-
-#zapcoder{
 	top: 10%;
 	left: 10%;
-	box-shadow: 0 2px 9px #333;
-	background-image: url(graphics/zapcoder.svg);
-}
-#ring0, #ring1{
+	border-radius:50%;
+	position: absolute;
 	transform-origin: 50% 50%;
 	transition: transform 0.5s ease-in-out;
+}
+#zapcoder{
+	box-shadow: 0 2px 9px #333;
+	background-image: url(graphics/zapcoder.svg);
 }
 #ring0{
 	background-image: url(graphics/ring_0.svg);
@@ -74,18 +57,14 @@ body{
 }
 </style>
 </head>
-
 <body>
-
 	<div id="container">
-		<div id="zapcoder">
-			<div id="ring0"></div>
-			<div id="ring1"></div>
-			<div id="btnCW" onclick="turnCW()"></div>
-			<div id="btnCCW" onclick="turnCCW()"></div>
-		</div>
+		<div id="zapcoder"></div>
+		<div id="ring0"></div>
+		<div id="ring1"></div>
+		<div id="btnCW" onclick="turnCW()"></div>
+		<div id="btnCCW" onclick="turnCCW()"></div>
 	</div>
-
 	<script type="text/javascript">
 		var angleRing1 = -27;
 		var angleRing0 = 27;
