--- a/zapcoder/index.html
+++ b/zapcoder/index.html
@@ -7,9 +7,14 @@
  <meta name="apple-mobile-web-app-capable" content="yes">
 <title>ZapCoder</title>
 <style>
+html{
+	height:100vh;
+	width:100vW;
+	background: #99a;
+	box-shadow: 0 -20vh 150px #222 inset;
+}
 body{
 	margin:0;
-	background: #999;
 }
 #container{
 	width:80vw;
@@ -17,9 +22,10 @@ body{
 	margin:auto;
 	margin-top:calc( 50vh - 40vw );
 	position: relative;
-	border:1px solid #555;
+	border:1px solid #222;
 	border-radius:50%;
 	overflow:hidden;
+	box-shadow: 0 -2px 4px #333, 0 -2px 4px #333 inset, 0 2px 3px #aac, 0 2px 3px #eef inset;
 }
 #zapcoder, #ring0, #ring1{
  	width:80%;
