--- a/psycho/index.html
+++ b/psycho/index.html
@@ -18,6 +18,7 @@
 			<div id="game"></div>
 			<div id="left"></div>
 			<div id="right"></div>
+			<div id="error">X</div>
 			<div id="debug">Barre espace pour commencer</div>
 		</div>
 	</body>
