--- a/tyndall/index.html
+++ b/tyndall/index.html
@@ -9,9 +9,6 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="mobile-web-app-capable" content="yes" />
 		<style type="text/css" title="Default">
-			body, div, h1, h2, h3, span, p {
-				font-family: Verdana,Arial,Helvetica,sans-serif;
-			}
 			/* fullscreen */
 			html {
 				height:100%;
@@ -20,7 +17,6 @@
 				height:100%;
 				margin: 0px;
 				overflow:hidden; /* disable scrollbars */
-				font-size: 10pt;
 				-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* remove highlight on tab for iOS/Android */
 			}
 			/* fix for scroll bars on webkit & >=Mac OS X Lion */ 
@@ -39,6 +35,8 @@
 		</script>
 		<script type="text/javascript" src="skin.js">
 		</script>
+		<script src="webvr/three.min.js"></script>
+		<script src="webvr/webvr-polyfill.min.js"></script>
 		<div id="container" style="width:100%;height:100%;overflow:hidden;">
 		<br>Loading...<br><br>
 		</div>
